== Changelog

[discrete]
=== 17 October 2021 (**r66** on Itch.io)
* *[NEW]* Add an option to specify the frames layout inside a spritesheet
* *[FIX]* Clear the spritesheet texture before rendering frames
* *[FIX]* Stabilize tips window size by extending tips strings with new lines

[discrete]
=== 12 October 2021
* *[NEW]* Add groups to organize sprites
* *[NEW]* Add colors to sprites and groups to easily locate corresponding animations
* *[NEW]* Assign a name to a newly created sprite, group, or animation
* *[FIX]* Reverse list of sprites in combo boxes to match the rendering layer order
* *[FIX]* Clone corresponding animations when cloning a sprite
* *[FIX]* Unassign a sprite's parent if the latter is deleted

[discrete]
=== 07 October 2021
* *[NEW]* Move sprites and animations with the up or down arrow key
* *[NEW]* Navigate tips with the left or right arrow key
* *[FIX]* Disable (without hiding) all the buttons from the textures, sprites, scripts and animations windows
* *[FIX]* Disable (without hiding) the context menu items that cannot be selected
* *[FIX]* Select the texture, sprite, script, or animation when opening its context menu
* *[FIX]* In the animations window, replace the child index with a progressive number
* *[FIX]* Show the texrect window even when there are no sprites
* *[FIX]* Hide the root animation entry if the are no animations
* *[FIX]* Show an horizontal separator even without a tree list below it
* *[FIX]* Fix the selection after an animation drag and drop

[discrete]
=== 14 September 2021
* *[NEW]* Edit sprites and animations name in the Sprites and Animations windows
* *[NEW]* Load a different file for a texture without affecting sprites or animations
* *[NEW]* Change the texture associated to a sprite without affecting its animations
* *[NEW]* When cloning a sprite also clone its children and its animations
* *[NEW]* Flash the window and system taskbar when a render is finished on a desktop platform